[gd_scene load_steps=9 format=2]

[ext_resource path="res://platformer/assets/gold_1.png" type="Texture" id=1]
[ext_resource path="res://platformer/assets/ui/hud_theme.tres" type="Theme" id=2]
[ext_resource path="res://platformer/src/ui/hud.gd" type="Script" id=3]
[ext_resource path="res://platformer/assets/gold_2.png" type="Texture" id=4]
[ext_resource path="res://platformer/assets/gold_4.png" type="Texture" id=5]
[ext_resource path="res://platformer/src/ui/pause_menu.tscn" type="PackedScene" id=6]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 84.0
theme = ExtResource( 2 )

[node name="CoinIcon" type="TextureRect" parent="HBoxContainer"]
margin_right = 84.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 42, 42 )
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="CoinLabel" type="Label" parent="HBoxContainer"]
margin_left = 100.0
margin_top = 26.0
margin_right = 180.0
margin_bottom = 58.0
text = "12345"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 196.0
margin_right = 894.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="PauseButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 910.0
margin_right = 976.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 33, 42 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
